Add Student Resources down page link to Details

--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -12,7 +12,8 @@
                         <div class="table-of-contents hidden">
                             <div class="box"></div>
                         </div>
-                        <a href="#resources" class="tab"><span>Resources</span></a>
+                        <a href="#resources" class="tab"><span>Instructor Resources</span></a>
+                        <a href="#student-resources-section" class="tab"><span>Student Resources</span></a>
                         <a href="#details" class="tab"><span>Details</span></a>
                         <a href="#errata" class="tab errata-tab"><span>Errata</span></a>
                     </div>
@@ -61,13 +62,17 @@
                 <p>Get started with free resources to support your course. (Verified instructor
                     account required.)</p>
                 <div id="instructor-resources" class="resource"></div>
+                <p>
+                    Access these free resources with your verified instructor account.
+                    <span id="extra-instructions"></span>
+                </p>
             </div>
             <div class="row">
             <h3>Ally Resources</h3>
             <p>Learn more about our <a href="/allies">allies</a>.</p>
             <div id='allies' class="resource"></div>
             </div>
-            <div class="row">
+            <div id="student-resources-section" class="row">
                 <h3>Student Resources</h3>
                 <div id="student-resources" class="resource"></div>
             </div>
