Sort staff by last name on About Us Fix Subjects query and change About Us page header Fix Subjects page appearance and behavior  Per https://trello.com/c/dYyQgc8g Make down page links scroll on Higher Ed and K-12

--- a/src/app/pages/about-us/about-us.hbs
+++ b/src/app/pages/about-us/about-us.hbs
@@ -2,7 +2,7 @@
     @import url(/app/pages/about-us/about-us.css);
 </style>
 <div class="hero">
-    <h1>Who we are.</h1>
+    <h1>About Us</h1>
     <p class="subhead">
         OpenStax is a nonprofit based at Rice University, and it’s our mission to
         improve student access to education. Our first open source college
