--- a/src/app/pages/home/education/education.hbs
+++ b/src/app/pages/home/education/education.hbs
@@ -30,7 +30,7 @@
                 <li>
                     <a class="btn btn-large btn-yellow k-12" href="/k-12">
                         <span class="title">K-12</span>
-                        <span class="blurb">Adaptive learning courseware and peer-reviewed textbooks for AP&reg; courses</span>
+                        <span class="blurb">Adaptive learning courseware and peer-reviewed textbooks for AP<sup>&reg;</sup> courses</span>
                     </a>
                 </li>
             </ul>
