Updated footer copy

--- a/src/app/components/shell/footer/footer.hbs
+++ b/src/app/components/shell/footer/footer.hbs
@@ -26,15 +26,16 @@
             </ul>
 
             <p>
-                Supported by William &amp; Flora Hewlett Foundation,
-                Bill &amp; Melinda Gates Foundation, 20 Million Minds
-                Foundation, Maxfield Foundation, Open Society Foundations,
+                Supported by William and Flora Hewlett Foundation,
+                Bill &amp; Melinda Gates Foundation, The Michelson 20
+                Million Minds Foundation, Maxfield Foundation, Open
+                Society Foundations, Laura and John Arnold Foundation
                 and Rice University.
             </p>
 
             <p>
-                &copy; 1999-2015, Rice University. Except where otherwise noted,
-                content created on this site is licensed under a Creative
+                &copy; 1999-2015, Rice University. Except otherwise noted,
+                textbooks on this site are licensed under a Creative
                 Commons Attribution 4.0 License.
             </p>
 
