--- a/src/app/pages/allies/allies.scss
+++ b/src/app/pages/allies/allies.scss
@@ -20,15 +20,15 @@ $text-dark2: rgba(0, 0, 0, 0.7);
     .hero {
         background-color: color(green);
         color: color(neutral-lightest);
+        padding: 2rem 2rem 11rem;
         text-align: left;
-        padding: 8rem 0;
 
         @include desktop {
             text-align: center;
         }
 
         h1 {
-            color: color(neutral-lightest);
+            color: inherit;
         }
 
         .subhead {
