--- a/src/app/pages/contact/contact.hbs
+++ b/src/app/pages/contact/contact.hbs
@@ -7,7 +7,7 @@
 
         <h1>Contact us</h1>
         <p class="subhead">
-            If you have question or feedback, drop us a line!
+          If you have any questions or feedback, drop us a line!
         </p>
         <form action="/api/mail/send_mail/" method="post">
             <input type="hidden" name="csrfmiddlewaretoken" />
