--- a/src/app/pages/foundation/foundation.hbs
+++ b/src/app/pages/foundation/foundation.hbs
@@ -17,7 +17,12 @@
             <div class="text">
                 <h2>The Laura and John Arnold Foundation</h2>
                 <p>
-                    Laura and John Arnold Foundation (LJAF) actively seeks opportunities to invest in organizations and thought leaders that have a sincere interest in implementing fundamental changes that not only yield immediate gains, but also repair broken systems for future generations. LJAF currently focuses its strategic investments on education, criminal justice, research integrity, and public accountability.
+                    Laura and John Arnold Foundation (LJAF) actively seeks opportunities
+                    to invest in organizations and thought leaders that have a sincere
+                    interest in implementing fundamental changes that not only yield
+                    immediate gains, but also repair broken systems for future
+                    generations. LJAF currently focuses its strategic investments on
+                    education, criminal justice, research integrity, and public accountability.
                 </p>
             </div>
         </div>
@@ -28,7 +33,16 @@
             <div class="text">
                 <h2>The Bill &amp; Melinda Gates Foundation</h2>
                 <p>
-                    Guided by the belief that every life has equal value, the Bill &amp; Melinda Gates Foundation works to help all people lead healthy, productive lives. In developing countries, it focuses on improving people’s health with vaccines and other life-saving tools and giving them the chance to lift themselves out of hunger and extreme poverty. In the United States, it seeks to significantly improve education so that all young people have the opportunity to reach their full potential. Based in Seattle, Washington, the foundation is led by CEO Jeff Raikes and Co-chair William H. Gates Sr., under the direction of Bill and Melinda Gates and Warren Buffett.
+                    Guided by the belief that every life has equal value, the Bill
+                    &amp; Melinda Gates Foundation works to help all people lead
+                    healthy, productive lives. In developing countries, it focuses
+                    on improving people’s health with vaccines and other life-saving
+                    tools and giving them the chance to lift themselves out of hunger
+                    and extreme poverty. In the United States, it seeks to significantly
+                    improve education so that all young people have the opportunity to
+                    reach their full potential. Based in Seattle, Washington, the
+                    foundation is led by CEO Jeff Raikes and Co-chair William H. Gates
+                    Sr., under the direction of Bill and Melinda Gates and Warren Buffett.
                 </p>
             </div>
         </div>
@@ -39,7 +53,13 @@
             <div class="text">
                 <h2>The William and Flora Hewlett Foundation</h2>
                 <p>
-                    The William and Flora Hewlett Foundation has been making grants since 1967 to help solve social and environmental problems at home and around the world. The Foundation concentrates its resources on activities in education, the environment, global development and population, performing arts, and philanthropy, and makes grants to support disadvantaged communities in the San Francisco Bay Area.
+                    The William and Flora Hewlett Foundation has been making grants
+                    since 1967 to help solve social and environmental problems at
+                    home and around the world. The Foundation concentrates its
+                    resources on activities in education, the environment, global
+                    development and population, performing arts, and philanthropy,
+                    and makes grants to support disadvantaged communities in the
+                    San Francisco Bay Area.
                 </p>
             </div>
         </div>
@@ -50,7 +70,13 @@
             <div class="text">
                 <h2>The Calvin K. Kazanjian Economics Foundation</h2>
                 <p>
-                    Calvin K. Kazanjian was the founder and president of Peter Paul (Almond Joy), Inc. He firmly believed that the more people understood about basic economics the happier and more prosperous they would be. Accordingly, he established the Calvin K. Kazanjian Economics Foundation Inc, in 1949 as a philanthropic, nonpolitical educational organization to support efforts that enhanced economic understanding.
+                    Calvin K. Kazanjian was the founder and president of Peter Paul
+                    (Almond Joy), Inc. He firmly believed that the more people
+                    understood about basic economics the happier and more prosperous
+                    they would be. Accordingly, he established the Calvin K. Kazanjian
+                    Economics Foundation Inc, in 1949 as a philanthropic, nonpolitical
+                    educational organization to support efforts that enhanced economic
+                    understanding.
                 </p>
             </div>
         </div>
@@ -61,7 +87,9 @@
             <div class="text">
                 <h2>The Maxfield Foundation</h2>
                 <p>
-                    The Maxfield Foundation supports projects with potential for high impact in science, education, sustainability, and other areas of social importance.
+                    The Maxfield Foundation supports projects with potential for high
+                    impact in science, education, sustainability, and other areas of
+                    social importance.
                 </p>
             </div>
         </div>
@@ -72,7 +100,13 @@
             <div class="text">
                 <h2>Rice University</h2>
                 <p>
-                    As a leading research university with a distinctive commitment to undergraduate education, Rice University aspires to pathbreaking research, unsurpassed teaching, and contributions to the betterment of our world. It seeks to fulfill this mission by cultivating a diverse community of learning and discovery that produces leaders across the spectrum of human endeavor.
+                    OpenStax is Rice University’s nonprofit education initiative.
+                    As a leading research university with a distinctive commitment
+                    to undergraduate education, Rice University aspires to pathbreaking
+                    research, unsurpassed teaching, and contributions to the betterment
+                    of our world. It seeks to fulfill this mission by cultivating a
+                    diverse community of learning and discovery that produces leaders
+                    across the spectrum of human endeavor.
                 </p>
             </div>
         </div>
@@ -83,7 +117,8 @@
             <div class="text">
                 <h2>The Bill and Stephanie Sick Fund</h2>
                 <p>
-                    The Bill and Stephanie Sick Fund supports innovative projects in the areas of Education, Art, Science and Engineering.
+                    The Bill and Stephanie Sick Fund supports innovative projects
+                    in the areas of Education, Art, Science and Engineering.
                 </p>
             </div>
         </div>
@@ -94,7 +129,10 @@
             <div class="text">
                 <h2>The Michelson 20MM Foundation</h2>
                 <p>
-                  Founded by Dr. Gary K. Michelson, the Michelson 20MM Foundation supports and invests in leading edge entrepreneurs, technologies, models, and initiatives with the potential to improve postsecondary access, affordability, and student success.
+                  Founded by Dr. Gary K. Michelson, the Michelson 20MM Foundation
+                  supports and invests in leading edge entrepreneurs, technologies,
+                  models, and initiatives with the potential to improve postsecondary
+                  access, affordability, and student success.
                 </p>
             </div>
         </div>
