Update Home page
Spacing and copy changes; scroll down chevron

--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -75,7 +75,8 @@
                 <div id="student-resources" class="resource"></div>
             </div>
             <div class="cta hidden">
-                <a class="btn handbook-link">Learn how you can tell your instructor about OpenStax!</a>
+                <a class="btn handbook-link">Learn how you can help bring more
+                    OpenStax books to your campus!</a>
             </div>
         </div>
         </section>
