--- a/src/app/components/buckets/buckets.scss
+++ b/src/app/components/buckets/buckets.scss
@@ -7,7 +7,7 @@
     padding: 1.5rem;
 
     @include desktop {
-        padding: 8rem 1.5rem;
+        padding: 9rem 1.5rem;
     }
 
     .bucket {
@@ -62,6 +62,10 @@
         &.our-impact {
             background-color: color(neutral-medium);
             margin-bottom: 1.5rem;
+
+            @include desktop {
+                margin-bottom: 5rem;
+            }
 
             > .image {
                 background-image: url('/images/home/buckets/our-impact.jpg');
