--- a/src/app/pages/home/home.hbs
+++ b/src/app/pages/home/home.hbs
@@ -1,11 +1,13 @@
 <style scoped>
     @import url(/app/pages/home/home.css);
+    @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css);
 </style>
 <div class="home-page">
     <main id="maincontent">
         <div class="book-banner"></div>
+        <span class="scrolldown-chevron"><a href="#education"><i class="fa fa-chevron-down"></i></a></span>
         <div class="quote-buckets"></div>
-        <div class="education"></div>
+        <div id="education" class="education"></div>
         <div class="buckets"></div>
     </main>
 </div>
