--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -9,6 +9,31 @@
     }
 }
 
+.scrolldown-chevron {
+    align-items: center;
+    display: flex;
+    font-size: 4rem;
+    height: 0;
+    justify-content: space-around;
+    opacity: 0.5;
+    position: relative;
+    top: -3rem;
+    z-index: 100;
+
+    @include phone {
+        display: none;
+    }
+
+    i {
+        color: color(neutral-lightest);
+        padding: 1rem;
+    }
+}
+
 .quote-buckets {
     background-color: lighten(color(neutral-lighter), 8%);
+
+    .attribution {
+        text-align: right;
+    }
 }
