--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -67,11 +67,18 @@
             </div>
             <div class="row">
             <h3>Ally Resources</h3>
-            <p>Learn more about our <a href="/allies">allies</a>.</p>
+            <p>
+                OpenStax Allies provide additional, low-cost resources for your
+                book. See what’s offered for this title below and learn more about
+                our <a href="/allies">Allies here</a>.</p>
             <div id='allies' class="resource"></div>
             </div>
             <div id="student-resources-section" class="row">
                 <h3>Student Resources</h3>
+                <p>
+                    Take a look at our free student resources that are integrated
+                    with your book to help you ace your course.
+                </p>
                 <div id="student-resources" class="resource"></div>
             </div>
             <div class="cta hidden">
