Implement redesigned Allies page
Top section is a group of icons that link to blurbs in the bottom
section
Each blurb has a “back to top” link
Filtering applies to both icons and blurbs
Added optional license_text to Details publishing info

--- a/src/app/pages/allies/allies.hbs
+++ b/src/app/pages/allies/allies.hbs
@@ -7,10 +7,11 @@
         <p id="page-subhead" class="subhead"></p>
     </div>
 </div>
-<div class="blurbs">
+<div class="icons">
     {{{strips}}}
     <div class="filter">
         <div class="filter-buttons"></div>
     </div>
     <div class="container"></div>
 </div>
+<div class="blurbs container"></div>
