--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -110,7 +110,10 @@
                             <th>License</th>
                             <td class="license">
                                 <img src="/images/details/by-license.png" />
-                                <span class="text"></span>
+                                <div>
+                                    <div class="text"></div>
+                                    <div class="extra-text"></div>
+                                </div>
                             </td>
                         </tr>
                     </tbody>
