--- a/src/app/pages/k-12/banner/banner.hbs
+++ b/src/app/pages/k-12/banner/banner.hbs
@@ -1,7 +1,7 @@
 <div class="row">
 <div class="square-1"></div>
 <div class="square-2"></div>
-<div class="square-3">
+<div class="square-3 hero">
     <div class="blurb">
         <h1>No two students are alike.</h1>
         <p>So we’re leveling the playing field in K­12 classrooms with personalized
